--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE htm>
-<htm>
+<!DOCTYPE html>
+<html>
     <head>
         <meta charset="UTF-8">
         <title>My Resume</title>
@@ -50,7 +50,7 @@
     
     </body>
 
-</htm>
+</html>
 
 
 
